@@ -217,10 +217,11 @@
       (if point (1+ point))))
   (defun ac-semantic-setup ()
     (setq ac-sources (append '(ac-source-semantic) ac-sources)))
-  (defun ac-org-mode-setup ()
-    (add-to-list 'ac-sources 'ac-source-yasnippet))
   (add-hook 'c-mode-common-hook 'ac-semantic-setup)
   ;; (define-key c-mode-base-map (kbd "M-n") 'ac-complete-semantic)
+  (ac-ropemacs-initialize)
+  (defun ac-org-mode-setup ()
+    (add-to-list 'ac-sources 'ac-source-yasnippet))
   (add-hook 'org-mode-hook 'ac-org-mode-setup))
 
 ;; company
